# MLopsRepo

./: Makefile  README.md  data.dvc  pyproject.toml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_test_cookiecutter/: __init__.py
